--- a/views/IdentificacaoLivro.html
+++ b/views/IdentificacaoLivro.html
@@ -146,7 +146,7 @@
             padding: 20px;
             text-align: center;
             z-index: 1000;
-            display: none; 
+            display: none;
             width: 300px;
         }
 
@@ -200,10 +200,22 @@
                         document.getElementById('title').innerHTML = `<strong>Título:</strong> ${dataBook.title || 'Título não disponível'}`;
                         document.getElementById('author').innerHTML = `<strong>Autor:</strong> ${dataBook.author || 'Autor não disponível'}`;
                         document.getElementById('status').innerHTML = `<strong>Status:</strong> ${dataBook.status || 'status desconhecido'}`;
-
                         // Exibe o elemento de informação
                         document.getElementById('info').style.display = 'block';
-                        startCountdown('/confirmacaoEmprestimo');
+                        //startCountdown('/confirmacaoEmprestimo');
+                                       // Verificar o status do livro
+                const status = dataBook.status;
+
+                if (status == '1') {
+                    // Status vazio: redirecionar para empréstimo
+                    startCountdown('/confirmacaoEmprestimo');
+                    console.log("Confirmacao")
+                } else if (status == '2') {
+                    // Status 1: redirecionar para devolução
+                    startCountdown('/confirmacaoDevolucao');
+                    // Voltar o status para vazio no localStorage
+                    //localStorage.setItem('status', '');
+                }
 
                     } else {
                         console.error('Erro ao buscar dados do livro');
