--- a/views/ConfirmacaoEmprestimo.html
+++ b/views/ConfirmacaoEmprestimo.html
@@ -223,7 +223,8 @@ function processRFID(event) {
         }
 
         console.log('RFID capturado:', rfidValue);
-        fetch('http://localhost:4001/api/management/get/book', { // Endpoint corrigido
+        //fetch('http://localhost:4001/api/management/get/book', { // Endpoint corrigido
+        fetch('http://localhost:4001/api/transaction/lend',{
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
@@ -299,3 +300,4 @@ window.onload = function() {
 
     <img src="Arandu.png" alt="Arandu Technology" class="bottom-image">
     <div class="rights-reserved">Todos os direitos reservados 2024© Arandu™</div>
+</body>
