--- a/views/IdentificacaoLivro.html
+++ b/views/IdentificacaoLivro.html
@@ -209,7 +209,7 @@
                 if (status == '1') {
                     startCountdown('/confirmacaoEmprestimo');
                 } else if (status == '2') {
-                    startCountdown('/confirmacaoDevolucao');
+                    startCountdown('/ConfirmacaoDevolucao.html');
                 }
 
                     } else {
@@ -242,10 +242,8 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/">
-            <img src="LogoPlataformaCurumim.png" alt="Plataforma Curumim" class="top-image">
-        </a>
-        <a href="/">Empréstimo/Devolução</a>
+        <img src="LogoPlataformaCurumim.png" alt="Plataforma Curumim" class="top-image">
+        <a href="/">Emprestimo/Devolução</a>
         <a href="/CadastroLivros">Cadastro de Livro</a>
         <a href="/CadastroUsuario">Cadastro de Usuário</a>
         <a href="/Contato">Sobre</a>
