--- a/views/IdentificacaoUsuario.html
+++ b/views/IdentificacaoUsuario.html
@@ -7,7 +7,7 @@
     <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #A02627; /* Cor de fundo vermelha */
+        background-color: #A02627;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -159,7 +159,7 @@
             const countdownElement = document.getElementById('countdown');
             countdownElement.style.display = 'block';
             countdownElement.innerText = 'Redirecionando...';
-            
+
             setTimeout(() => {
                 window.location.href = redirectUrl;
             }, 1000); // Redireciona após 1 segundo
