--- a/views/CadastroLivros.html
+++ b/views/CadastroLivros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #366CC8; /* Cor de fundo azul */
+            background-color: #366CC8;
+            /* Cor de fundo azul */
             margin: 0;
             padding: 0;
             display: flex;
@@ -63,7 +65,7 @@
             color: #A02627;
         }
 
-        .form-and-cover {/*atencao*/
+        .form-and-cover {
             display: flex;
             align-items: flex-start;
             width: 100%;
@@ -74,26 +76,33 @@
             grid-template-columns: repeat(3, 1fr);
             gap: 20px;
             width: 100%;
-            justify-items: center; /* Alinha os itens no centro das colunas */
+            justify-items: center;
         }
 
         .input-field {
-            display: flex; /* Troca para flexbox */
+            display: flex;            /* Troca para flexbox */
             flex-direction: column;
-            align-items: center; /* Centraliza o conteúdo dentro do input-field */
-            width: auto; /* Muda para auto para não forçar largura total */
-            flex-grow: 1; /* Permite que os campos se expandam igualmente */
-            min-width: 150px; /* Largura mínima para os campos */
+            align-items: center;      /* Centraliza o conteúdo dentro do input-field */
+            width: auto;
+            /* Muda para auto para não forçar largura total */
+            flex-grow: 1;
+            /* Permite que os campos se expandam igualmente */
+            min-width: 150px;
+            /* Largura mínima para os campos */
             margin-left: 16px;
         }
 
         input[type="text"],
-        input[type="date"] {
+        input[type="text"],
+        input[type="text"],
+        input[type="date"],
+        input[type="text"] {
             padding: 10px;
             width: 110%;
             border: 1px solid #ccc;
             border-radius: 4px;
-            box-sizing: border-box; /* Inclui padding e border no width */
+            box-sizing: border-box;
+            /* Inclui padding e border no width */
         }
 
         label {
@@ -102,7 +111,8 @@
             margin-bottom: 5px;
             color: #A02627;
             font-weight: bold;
-            text-align: center; /* Centraliza o texto do label */
+            text-align: center;
+            /* Centraliza o texto do label */
         }
 
         .submit-button {
@@ -113,7 +123,8 @@
             border-radius: 4px;
             cursor: pointer;
             margin-top: 20px;
-            grid-column: span 3; /* Faz o botão ocupar as três colunas */
+            grid-column: span 3;
+            /* Faz o botão ocupar as três colunas */
         }
 
         .submit-button:hover {
@@ -126,8 +137,10 @@
             padding: 10px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 700px; /* Mantém a mesma largura que o container */
-            max-height: 300px; /* Limita a altura da lista e permite scroll */
+            width: 700px;
+            /* Mantém a mesma largura que o container */
+            max-height: 300px;
+            /* Limita a altura da lista e permite scroll */
             overflow-y: auto;
         }
 
@@ -137,7 +150,8 @@
             margin-top: 20px;
         }
 
-        th, td {
+        th,
+        td {
             border: 1px solid #ccc;
             padding: 8px;
             text-align: left;
@@ -171,26 +185,42 @@
             z-index: 1000;
             transition: opacity 0.3s ease;
         }
+
         .hidden {
             display: none;
         }
-        .checkmark, .error-mark {
+
+        .checkmark,
+        .error-mark {
             font-size: 40px;
             display: block;
             margin-bottom: 10px;
         }
+
         .cover-upload-area span {
-            color: #A02627; /* Cor do texto */
+            color: #A02627;
+            /* Cor do texto */
             font-weight: bold;
-            text-align: center; /* Centraliza o texto */
+            text-align: center;
+            /* Centraliza o texto */
         }
 
-     .cover-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: none;
-}
+        .cover-image {
+            width: 100%;
+            /* Ajusta a largura da imagem para caber no container */
+            height: 100%;
+            /* Ajusta a altura da imagem para caber no container */
+            object-fit: cover;
+            /* Faz a imagem preencher o contêiner, mantendo a proporção */
+            display: none;
+            /* Escondido inicialmente */
+            position: absolute;
+            /* Para que a imagem fique sobreposta ao container */
+            top: 0;
+            /* Alinha ao topo */
+            left: 0;
+            /* Alinha à esquerda */
+        }
 
         .rights-reserved {
             position: absolute;
@@ -199,25 +229,35 @@
             font-size: 12px;
             color: #fff;
         }
-        
-        .cover-upload-area {
-            border: 2px dashed #A02627; /* Bordas pontilhadas */
-            border-radius: 8px; /* Cantos arredondados */
-            width: 150px; /* Tamanho fixo do contêiner */
-            height: 200px; /* Altura fixada para o contêiner */
-            display: flex;
-            justify-content: center; /* Centraliza horizontalmente */
-            align-items: center; /* Centraliza verticalmente */
-            position: relative; /* Para posicionar a imagem dentro */
-            overflow: hidden; /* Esconde qualquer parte da imagem que ultrapasse */
-            margin-left: auto; /* Empurra o container da imagem para a direita */
-            margin-right: 20px; /* Espaço à direita do contêiner */
-            background-color: #f0f0f0; /* Cor de fundo para o campo de upload */
-            top: 0;
-        }
 
+        .cover-upload-area {
+            border: 2px dashed #A02627;
+            /* Bordas pontilhadas */
+            border-radius: 8px;
+            /* Cantos arredondados */
+            width: 150px;
+            /* Tamanho fixo do contêiner */
+            height: 200px;
+            /* Altura fixada para o contêiner */
+            display: flex;
+            justify-content: center;
+            /* Centraliza horizontalmente */
+            align-items: center;
+            /* Centraliza verticalmente */
+            position: relative;
+            /* Para posicionar a imagem dentro */
+            overflow: hidden;
+            /* Esconde qualquer parte da imagem que ultrapasse */
+            margin-left: auto;
+            /* Empurra o container da imagem para a direita */
+            margin-right: 20px;
+            /* Espaço à direita do contêiner */
+            background-color: #f0f0f0;
+            /* Cor de fundo para o campo de upload */
+        }
     </style>
 </head>
+
 <body>
     <div class="navbar">
         <img src="LogoPlataformaCurumim.png" alt="Plataforma Curumim">
@@ -276,7 +316,8 @@
             <div class="input-field">
                 <label for="bookCoverInput">Capa do Livro</label>
                 <div class="cover-upload-area" onclick="document.getElementById('bookCoverInput').click();">
-                    <input type="file" id="bookCoverInput" name="bookCover" accept="image/*" onchange="previewImage(event)" style="display: none;">
+                    <input type="file" id="bookCoverInput" name="bookCover" accept="image/*"
+                        onchange="previewImage(event)" style="display: none;">
                     <img id="bookCover" class="cover-image" alt="Capa do Livro">
                     <span>Clique ou arraste para fazer upload</span>
                 </div>
@@ -291,7 +332,7 @@
             <span class="error-mark">❌</span>
             <p>Erro ao cadastrar. Tente novamente.</p>
         </div>
-            <!-- Lista de Livros Cadastrados -->
+        <!-- Lista de Livros Cadastrados -->
         <div class="books-list" id="booksList">
             <h3>Livros Cadastrados</h3>
             <table id="bookTableBody">
@@ -312,119 +353,119 @@
             </table>
 
         </div>
-    <script>
-        async function fetchBookData() {
-            const isbn = document.getElementById('isbn').value.trim();
-    
-            if (!isbn) {
-                alert('Por favor, insira um ISBN.');
-                return;
-            }
-    
-            try {
-                const response = await fetch(`https://www.googleapis.com/books/v1/volumes?q=isbn:${isbn}`);
-    
-                if (response.ok) {
-                    const bookData = await response.json();
-                    const items = bookData.items;
-    
-                    if (items && items.length > 0) {
-                        const bookInfo = items[0].volumeInfo;
-    
-                        document.getElementById('title').value = bookInfo.title || '';
-                        document.getElementById('subtitle').value = bookInfo.subtitle || '';
-                        document.getElementById('author').value = (bookInfo.authors && bookInfo.authors.join(', ')) || '';
-    
-                        const bookCoverImg = document.getElementById('bookCover');
-                        if (bookInfo.imageLinks && bookInfo.imageLinks.thumbnail) {
-                            bookCoverImg.src = bookInfo.imageLinks.thumbnail;
-                            bookCoverImg.style.display = 'block';
+        <script>
+            async function fetchBookData() {
+                const isbn = document.getElementById('isbn').value.trim();
+
+                if (!isbn) {
+                    alert('Por favor, insira um ISBN.');
+                    return;
+                }
+
+                try {
+                    const response = await fetch(`https://www.googleapis.com/books/v1/volumes?q=isbn:${isbn}`);
+
+                    if (response.ok) {
+                        const bookData = await response.json();
+                        const items = bookData.items;
+
+                        if (items && items.length > 0) {
+                            const bookInfo = items[0].volumeInfo;
+
+                            document.getElementById('title').value = bookInfo.title || '';
+                            document.getElementById('subtitle').value = bookInfo.subtitle || '';
+                            document.getElementById('author').value = (bookInfo.authors && bookInfo.authors.join(', ')) || '';
+
+                            const bookCoverImg = document.getElementById('bookCover');
+                            if (bookInfo.imageLinks && bookInfo.imageLinks.thumbnail) {
+                                bookCoverImg.src = bookInfo.imageLinks.thumbnail;
+                                bookCoverImg.style.display = 'block';
+                            } else {
+                                bookCoverImg.style.display = 'none';
+                            }
                         } else {
-                            bookCoverImg.style.display = 'none';
+                            alert('Livro não encontrado. Verifique o ISBN e tente novamente.');
                         }
                     } else {
-                        alert('Livro não encontrado. Verifique o ISBN e tente novamente.');
+                        alert(`Erro ao buscar os dados do livro. Status: ${response.status} - ${response.statusText}`);
                     }
+                } catch (error) {
+                    console.error('Erro ao buscar os dados do livro:', error);
+                    alert('Erro ao buscar os dados do livro. Verifique sua conexão ou tente mais tarde.');
+                }
+            }
+
+            function previewImage(event) {
+                const file = event.target.files[0];
+                if (file) {
+                    const reader = new FileReader();
+                    reader.onload = function (e) {
+                        const img = document.getElementById('bookCover');
+                        img.src = e.target.result;
+                        img.style.display = 'block';
+                    }
+                    reader.readAsDataURL(file);
+                }
+            }
+
+            function showPopup(type) {
+                const successPopup = document.getElementById('success-popup');
+                const errorPopup = document.getElementById('error-popup');
+
+                if (type === 'success') {
+                    successPopup.classList.remove('hidden');
+                    setTimeout(() => {
+                        successPopup.classList.add('hidden');
+                    }, 3000);
                 } else {
-                    alert(`Erro ao buscar os dados do livro. Status: ${response.status} - ${response.statusText}`);
+                    errorPopup.classList.remove('hidden');
+                    setTimeout(() => {
+                        errorPopup.classList.add('hidden');
+                    }, 4000);
                 }
-            } catch (error) {
-                console.error('Erro ao buscar os dados do livro:', error);
-                alert('Erro ao buscar os dados do livro. Verifique sua conexão ou tente mais tarde.');
             }
-        }
-    
-        function previewImage(event) {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    const img = document.getElementById('bookCover');
-                    img.src = e.target.result;
-                    img.style.display = 'block';
+
+            document.getElementById('bookRegistrationForm').addEventListener('submit', async function (event) {
+                event.preventDefault();
+
+                const formData = {
+                    rfidId: document.getElementById('rfidId').value.trim(),
+                    title: document.getElementById('title').value.trim(),
+                    subtitle: document.getElementById('subtitle').value.trim(),
+                    author: document.getElementById('author').value.trim(),
+                    sinopse: document.getElementById('sinopse').value.trim(),
+                    gender: document.getElementById('gender').value.trim(),
+                    language: document.getElementById('language').value.trim(),
+                    publishDate: document.getElementById('publishDate').value,
+                };
+
+                try {
+                    const response = await fetch('http://localhost:4001/api/management/register/book', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(formData)
+                    });
+
+                    if (response.ok) {
+                        addBookToList(formData);
+                        document.getElementById('bookRegistrationForm').reset();
+                        showPopup('success'); // Exibe popup de sucesso
+                    } else {
+                        alert('Erro ao cadastrar livro.');
+                    }
+                } catch (error) {
+                    console.error('Erro:', error);
+                    alert('Erro ao tentar cadastrar o livro.');
                 }
-                reader.readAsDataURL(file);
-            }
-        }
-    
-        function showPopup(type) {
-            const successPopup = document.getElementById('success-popup');
-            const errorPopup = document.getElementById('error-popup');
-    
-            if (type === 'success') {
-                successPopup.classList.remove('hidden');
-                setTimeout(() => {
-                    successPopup.classList.add('hidden');
-                }, 3000);
-            } else {
-                errorPopup.classList.remove('hidden');
-                setTimeout(() => {
-                    errorPopup.classList.add('hidden');
-                }, 4000);
-            }
-        }
-    
-        document.getElementById('bookRegistrationForm').addEventListener('submit', async function(event) {
-            event.preventDefault();
-    
-            const formData = {
-                rfidId: document.getElementById('rfidId').value.trim(),
-                title: document.getElementById('title').value.trim(),
-                subtitle: document.getElementById('subtitle').value.trim(),
-                author: document.getElementById('author').value.trim(),
-                sinopse: document.getElementById('sinopse').value.trim(),
-                gender: document.getElementById('gender').value.trim(),
-                language: document.getElementById('language').value.trim(),
-                publishDate: document.getElementById('publishDate').value,
-            };
-    
-            try {
-                const response = await fetch('http://localhost:4001/api/management/register/book', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(formData)
-                });
-    
-                if (response.ok) {
-                    addBookToList(formData);
-                    document.getElementById('bookRegistrationForm').reset();
-                    showPopup('success'); // Exibe popup de sucesso
-                } else {
-                    alert('Erro ao cadastrar livro.');
-                }
-            } catch (error) {
-                console.error('Erro:', error);
-                alert('Erro ao tentar cadastrar o livro.');
-            }
-        });
-    
-        function addBookToList(book) {
-            const booksContainer = document.getElementById('booksContainer');
-            const bookItem = document.createElement('tr');
-    
-            bookItem.innerHTML = `
+            });
+
+            function addBookToList(book) {
+                const booksContainer = document.getElementById('booksContainer');
+                const bookItem = document.createElement('tr');
+
+                bookItem.innerHTML = `
                 <td>${book.rfidId}</td>
                 <td>${book.title}</td>
                 <td>${book.subtitle || '-'}</td>
@@ -435,13 +476,14 @@
                 <td>${book.publishDate || '-'}</td>
                 <td><button onclick="removeBook(this)">Remover</button></td>
             `;
-            booksContainer.appendChild(bookItem);
-        }
-    
-        function removeBook(button) {
-            const row = button.parentElement.parentElement;
-            row.parentElement.removeChild(row);
-        }
-    </script>
+                booksContainer.appendChild(bookItem);
+            }
+
+            function removeBook(button) {
+                const row = button.parentElement.parentElement;
+                row.parentElement.removeChild(row);
+            }
+        </script>
 </body>
+
 </html>
