--- a/views/Agradecimento.html
+++ b/views/Agradecimento.html
@@ -112,7 +112,7 @@
 
     <div class="container">
         <h2>Obrigado pela Visita!</h2>
-        <div class="message">
+        <div class="message">//nome
             <p>🎉 Uau! Muito obrigado por visitar nossa biblioteca! Esperamos que você tenha encontrado um livro incrível para mergulhar.</p>
             
         </div>
